# predict-completion

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_data_science.yml
data/01_raw/: dataset.csv
data/04_feature/: train_dataset.csv
data/08_reporting/diagram.json/2025-03-06T22.07.01.582Z/: diagram.json
src/api/: main.py
src/taxfix/: __init__.py  __main__.py
src/taxfix/pipelines/data_processing/: nodes.py  pipeline.py
src/taxfix/pipelines/data_science/: nodes.py  pipeline.py
src/taxfix/pipelines/reporting/: nodes.py  pipeline.py
